# nousnet

./: Cargo.toml  EVENT_SOURCING_MIGRATION_PLAN.md  PLAN.md  justfile
.github/workflows/: push-docker.yml  solana-integration-test-base.yml  solana-integration-test-run.yml
architectures/centralized/client/: Cargo.toml
architectures/centralized/client/src/: app.rs  main.rs
architectures/centralized/local-testnet/src/: main.rs
architectures/centralized/server/: Cargo.toml
architectures/centralized/server/src/: app.rs  main.rs
architectures/decentralized/solana-client/: Cargo.toml
architectures/decentralized/solana-client/src/: app.rs  main.rs
architectures/decentralized/solana-common/: Cargo.toml
architectures/decentralized/solana-common/src/: backend.rs  instructions.rs
architectures/decentralized/testing/: Cargo.toml
architectures/decentralized/testing/src/: chaos.rs  docker_setup.rs  docker_watcher.rs  event_reader.rs  lib.rs  loss_tracker.rs  utils.rs
architectures/decentralized/testing/tests/: chaos_tests.rs  integration_tests.rs
architectures/inference-only/inference-node/: Cargo.toml
architectures/inference-only/inference-node/src/: main.rs
config/client/: .env.local
config/consilience/: state.toml
config/solana-test/: light-config.toml  nano-config.toml
config/test/: state.toml
docker/test/: docker-compose.yml
docker/test/rpc_fallback_test/: nginx_rpc_p8901.conf  nginx_rpc_p8902.conf
nix/: lib.nix  nixpkgs.nix
psyche-book/src/: SUMMARY.md
psyche-book/src/development/: observer.md
psyche-book/src/enduser/: join-run.md
python/: torchtitan.nix
python/python/psyche/models/: ttitan.py
python/python/psyche/sidecar/: __main__.py
scripts/: push-client-image.sh
shared/client/: Cargo.toml
shared/client/src/: cli.rs  client.rs  fetch_data.rs
shared/client/src/state/: cooldown.rs  init.rs  steps.rs  train.rs
shared/coordinator/src/: coordinator.rs
shared/data-provider/src/: hub.rs
shared/event-sourcing/: Cargo.toml
shared/event-sourcing/src/: bytes_visitor.rs  events.rs  lib.rs  projection.rs  store.rs  timeline.rs  tracing_layer.rs
shared/inference/src/: protocol.rs
shared/modeling/src/: lib.rs  python_distributed_causal_lm.rs  python_distributed_trainer.rs
shared/network/: Cargo.toml
shared/network/examples/: model_sharing_test.rs
shared/network/src/: allowlist.rs  connection_monitor.rs  lib.rs  p2p_model_sharing.rs  router.rs  state.rs  tui.rs
tools/rust-tools/observer/: Cargo.toml  app.rs  tui.rs  utils.rs
tools/rust-tools/run-manager/: Cargo.toml
(+24 files in other folders)
